# rpi-mailai

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
.github/workflows/: docker-build.yml  docker.yml
app/: mailai.py
compose/: docker-compose.yml
config/account_types/: README.md
docker/: Dockerfile  entrypoint.sh
docs/: PROJECT_ANALYSIS.md
examples/: accounts.yaml  config.cfg  config.yaml  intent_features.yaml  rules.yaml  status.yaml
mailai/: AGENT.md  LICENSE  README.md  pyproject.toml
mailai/src/mailai/: __init__.py  _wiring.py  accountctl.py  cli.py  health_llm.py
mailai/src/mailai/config/: __init__.py  backup.py  cron.py  loader.py  schema.py  status_store.py  watcher.py  yamlshim.py
mailai/src/mailai/core/: __init__.py  delete_semantics.py  engine.py  features.py  health.py  learner.py  llm_local.py  privacy.py  rule_synthesis.py
mailai/src/mailai/core/features/: GUIDE.md  __init__.py  extract.py  intent_extract.py  schema.py
mailai/src/mailai/imap/: __init__.py  actions.py  client.py  rules_mail.py  search.py  status_mail.py
mailai/src/mailai/utils/: __init__.py  ids.py  logging.py  mime.py  privacy.py  regexsafe.py  sqlcipher.py
scripts/: bootstrap_docker_mailai.sh
tests/: __init__.py  conftest.py  test_cli_wiring.py
tests/e2e/: test_cli.py  test_config_flow.py  test_intent_enrichment.py
tests/unit/: conftest.py  fakes.py  test_accountctl.py  test_config_loader.py  test_config_watcher.py  test_delete_semantics.py  (+9 more)
typer/: __init__.py
